--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -1072,7 +1072,7 @@
                                   <ng-select
                                     [items]="sewerageSystems"
                                     [(ngModel)]="applicationForm.sewerageId"
-                                    formControlName="heatingSystemId"
+                                    formControlName="sewerageId"
                                     bindValue="value"
                                     placeholder="Канализация">
                                   </ng-select>
