--- a/frontend/src/app/components/board/close-deal/close-deal.component.html
+++ b/frontend/src/app/components/board/close-deal/close-deal.component.html
@@ -4,39 +4,42 @@
     <fieldset class="scheduler-border col-sm">
       <legend class="scheduler-border">Договор на оказания услуги</legend>
 
-        <div class="form-group row">
-          <label class="col-sm-2 col-form-label">Статус</label>
-          <div class="col-sm-10">
-            <button type="button" class="btn btn-success btn-sm btn2">Сформировать</button>
-          </div>
+      <div class="row">
+        <div class="col-sm">
+          <label class="btn btn-info btn2 btn-sm">Статус:
+            <i class="fa fa-upload"></i>
+            <input type="file" multiple="" hidden (change)="onFileChange($event, 3)">
+          </label>
         </div>
-        <div class="form-group row">
-          <label class="col-sm-2 col-form-label">Сканированный документ</label>
-          <div class="col-sm-10">
-            <button type="button" class="btn btn-success btn-sm btn2">Прикрепить</button>
-          </div>
+        <div class="col-sm">
+          <label class="btn btn-info btn2 btn-sm">Сканированный документ
+            <i class="fa fa-upload"></i>
+            <input type="file" multiple="" hidden (change)="onFileChange($event, 3)">
+          </label>
         </div>
+      </div>
     </fieldset>
 
     <fieldset class="scheduler-border col-sm" *ngIf="operationId == 2">
       <legend class="scheduler-border">Договор о авансе/задатке</legend>
-
-      <div class="form-group row">
-        <label class="col-sm-2 col-form-label">Статус</label>
-        <div class="col-sm-10">
-          <button type="button" class="btn btn-success btn-sm btn2">Сформировать</button>
+      <div class="row">
+        <div class="col-sm">
+          <label class="btn btn-info btn2 btn-sm">Статус:
+            <i class="fa fa-upload"></i>
+            <input type="file" multiple="" hidden (change)="onFileChange($event, 3)">
+          </label>
         </div>
-      </div>
-      <div class="form-group row">
-        <label class="col-sm-2 col-form-label">Сканированный документ</label>
-        <div class="col-sm-10">
-          <button type="button" class="btn btn-success btn-sm btn2">Прикрепить</button>
+        <div class="col-sm">
+          <label class="btn btn-info btn2 btn-sm">Сканированный документ
+            <i class="fa fa-upload"></i>
+            <input type="file" multiple="" hidden (change)="onFileChange($event, 3)">
+          </label>
         </div>
       </div>
     </fieldset>
   </div>
   <div class="card-footer">
-    <button type="button" class="btn btn-success btn-sm btn2" (click)="cancel()">Отмена</button>
+    <button type="button" class="btn btn-secondary btn-sm btn2" (click)="cancel()">Отмена</button>
     <button type="button" class="btn btn-success btn-sm btn2">Закрыть сделку</button>
   </div>
 
