--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -499,6 +499,7 @@
                                     [items]="residentialComplexes"
                                     [(ngModel)]="applicationForm.residentialComplexId"
                                     (ngModelChange)="setResidenceComplexType()"
+                                    (clear)="clearResidentialComplex()"
                                     formControlName="residentialComplexId"
                                     placeholder="{{ 'claim.building' | translate }}">
                                   </ng-select>
