--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -8,7 +8,7 @@
           <p class="h4 mb-4">Логотип</p>
           <div class="row mb-4">
             <input type="text" class="form-control" placeholder="Логин"
-                   formControlName="username" [ngModel]="loginForm.username"/>
+                   formControlName="username" (keyup.enter)="login()"/>
             <div *ngIf="f.username.touched && f.username.invalid"
                  class="text-danger">
               <div *ngIf="f.username.errors.required">Введите логин пользователя</div>
@@ -17,7 +17,7 @@
           <div class="row mb-4">
             <div class="input-group">
               <input type="password" class="form-control" placeholder="Пароль" #x aria-label="password"
-                     aria-describedby="basic-addon2" formControlName="password" [ngModel]="loginForm.password">
+                     aria-describedby="basic-addon2" formControlName="password" (keyup.enter)="login()">
               <div class="input-group-append">
                 <a class="input-group-text" id="basic-addon2" (click)="x.type=x.type=='password'?'text':'password'"><i
                   aria-hidden="true" class="fa fa-eye"></i></a>
