--- a/frontend/src/app/components/claims/create-claim/claim-view/claim-view.component.html
+++ b/frontend/src/app/components/claims/create-claim/claim-view/claim-view.component.html
@@ -10,7 +10,7 @@
                 <input type="text" class="form-control" [value]="applicationId"
                        aria-describedby="basic-addon2" readonly>
                 <div class="input-group-append">
-                  <button type="button" class="btn btn-sm btn-outline-primary" (click)="editApplication()">
+                  <button type="button" class="btn btn-sm btn-outline-primary m-0 px-3 py-2 z-depth-0 waves-effect" (click)="editApplication()">
                     <i class="fa fa-edit" aria-hidden="true"></i>
                   </button>
                 </div>
