--- a/frontend/src/app/components/board/board.component.html
+++ b/frontend/src/app/components/board/board.component.html
@@ -1,95 +1,113 @@
-<div class="card-body card-bg" ngxUiLoaderBlurred>
+<div class="card">
+  <div class="card-body card-bg" ngxUiLoaderBlurred>
 
-  <div class="row">
-    <div class="btn-group btn-breadcrumb">
-      <a href="#" class="btn btn-primary"><i class="fa fa-home"></i></a>
-      <a class="btn btn-primary active" (click)="util.dnHrefParam('board', 3); refresh()">Панель управления</a>
-    </div>
-  </div>
-
-  <br/>
-
-  <router-outlet *ngIf="!displayBoardContent"></router-outlet>
-
-  <br/>
-  <div *ngIf="displayBoardContent">
-    <ul class="nav nav-tabs" id="myTab" role="tablist">
-      <li class="nav-item">
-        <a class="nav-link" [ngClass]="activeTab == 3 ? 'active' : ''" id="home-tab" data-toggle="tab" href="#home"
-           role="tab" aria-controls="home"
-           aria-selected="true" (click)="sortStatusesDic(3);" translate>board.commonBoard</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" [ngClass]="activeTab == 2 ? 'active' : ''" id="profile-tab" data-toggle="tab"
-           href="#profile" role="tab" aria-controls="profile"
-           aria-selected="false" (click)="sortStatusesDic(2)">Воронка продаж</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" [ngClass]="activeTab == 1 ? 'active' : ''" id="contact-tab" data-toggle="tab"
-           href="#contact" role="tab" aria-controls="contact"
-           aria-selected="false" (click)="sortStatusesDic(1)">Воронка покупателей</a>
-      </li>
-    </ul>
-    <div class="text-center" style="font-size: 18px">
-      <span><i class="fa fa-lightbulb-o" style="color: orange"></i> Всего в активе {{applicationCount}} сделок</span>
-      <span><i class="fa fa-money" style="color: green"></i>  Общая комиссия {{totalCommission | mask : 'separator.2' }}
-        ₸</span>
-    </div>
-    <br>
-    <div class="row" *ngIf="this.activeTab != 3">
-      <div class="col-sm">
-        <span>Фильтры:</span>
-        <button type="button" class="btn btn-sm btn-link" (click)="filtredLogin(null)">Все</button>
-        <button type="button" *ngFor="let agent of agentList;let i = index"
-                class="btn btn-sm btn-link" (click)="filtredLogin(agent.login)">{{agent.name}}</button>
+    <div class="row">
+      <div class="btn-group btn-breadcrumb">
+        <a href="#" class="btn btn-primary"><i class="fa fa-home"></i></a>
+        <a class="btn btn-primary active" (click)="util.dnHrefParam('board', 3); refresh()">Панель управления</a>
       </div>
     </div>
-    <br>
-    <div class="row" cdkDropListGroup [class.disabledDev]="this.activeTab == 3">
-      <div class="col-sm" *ngFor="let data of appStatusesData;let i = index">
-        <div class="row">
-          <div class="col-sm text-center">
-            Комиссия: {{data.boardData.commission ? data.boardData.commission : 0 | mask : 'separator.2'}} ₸
-          </div>
+
+    <br/>
+
+    <router-outlet *ngIf="!displayBoardContent"></router-outlet>
+
+    <br/>
+    <div *ngIf="displayBoardContent">
+      <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <li class="nav-item">
+          <a class="nav-link" [ngClass]="activeTab == 3 ? 'active' : ''" id="home-tab" data-toggle="tab" href="#home"
+             role="tab" aria-controls="home"
+             aria-selected="true" (click)="sortStatusesDic(3);" translate>board.commonBoard</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [ngClass]="activeTab == 2 ? 'active' : ''" id="profile-tab" data-toggle="tab"
+             href="#profile" role="tab" aria-controls="profile"
+             aria-selected="false" (click)="sortStatusesDic(2)">Воронка продаж</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [ngClass]="activeTab == 1 ? 'active' : ''" id="contact-tab" data-toggle="tab"
+             href="#contact" role="tab" aria-controls="contact"
+             aria-selected="false" (click)="sortStatusesDic(1)">Воронка покупателей</a>
+        </li>
+      </ul>
+      <div class="text-center" style="font-size: 18px">
+        <span><i class="fa fa-lightbulb-o" style="color: orange"></i> Всего в активе {{applicationCount}} сделок</span>
+        <span><i class="fa fa-money" style="color: green"></i>  Общая комиссия {{totalCommission | mask : 'separator.2' }}
+          ₸</span>
+      </div>
+      <br>
+      <div class="row" *ngIf="this.activeTab != 3">
+        <div class="col-sm">
+          <span>Фильтры:</span>
+          <button type="button" class="btn btn-sm btn-link" (click)="filtredLogin(null)">Все</button>
+          <button type="button" *ngFor="let agent of agentList;let i = index"
+                  class="btn btn-sm btn-link" (click)="filtredLogin(agent.login)">{{agent.name}}</button>
         </div>
-        <div class="alert bg-secondary text-white font-weight-bolder boardTitle text-center" role="alert" translate>
+      </div>
+      <br>
+      <div class="row" cdkDropListGroup [class.disabledDev]="this.activeTab == 3">
+        <div class="col-sm" *ngFor="let data of appStatusesData;let i = index">
           <div class="row">
-            <div class="col-sm">{{data.label}} <span
-              class="badge badge-danger">{{data.boardData.applicationLightDtoList?.data?.length}}</span></div>
-          </div>
-        </div>
-        <br/>
-        <div *ngIf="data.boardData"
-             cdkDropList
-             [cdkDropListData]="data.boardData.applicationLightDtoList?.data"
-             class="example-list "
-             [ngStyle]="{'min-height.px': this.height}"
-             [id]="data.value"
-             (cdkDropListDropped)="drop($event)">
-          <div *ngFor="let item of data.boardData.applicationLightDtoList?.data; let i = index" cdkDrag
-               [class]="item.style" (cdkDragDropped)="changeStatus($event,item, data.value)">
-            <div class="card">
-              <div class="card-body" [class]="getBgColorBySumm(item.price)">
-                <p class="card-text">{{item.id}} &nbsp;{{item.operationType?.name[getDicNameByLanguage()]}}</p>
-                <p class="card-text">
-                  {{item.agentLogin}}<br/>
-                  {{item.numberOfRooms}} комнатная, кв {{item.totalArea}}
-                  <span
-                    *ngIf="activeTab == 2">{{item?.residentialComplex ? item?.residentialComplex[getDicNameByLanguage()] : ''}}</span>
-                  <span *ngIf="activeTab == 1">{{item.district?.name[getDicNameByLanguage()]}}</span>
-                  <br/><span>цена: {{item.price | mask : 'separator.2'}}</span></p>
-                <i class="fa fa-phone" *ngIf="item.phone"><a href="tel:8{{item.phone}}"
-                                                             class="text-white"> {{item.phone | mask: '+0 (000) 000-0000'}}</a></i>
-              </div>
-              <div class="card-footer">
-                {{item.clientFullname}}
-              </div>
+            <div class="col-sm text-center">
+              Комиссия: {{data.boardData.commission ? data.boardData.commission : 0 | mask : 'separator.2'}} ₸
             </div>
-            <br/>
+          </div>
+          <div class="alert bg-secondary text-white font-weight-bolder boardTitle text-center" role="alert" translate>
+            <div class="row">
+              <div class="col-sm">{{data.label}} <span
+                class="badge badge-danger">{{data.boardData.applicationLightDtoList?.data?.length}}</span></div>
+            </div>
+          </div>
+          <br/>
+          <div *ngIf="data.boardData"
+               cdkDropList
+               [cdkDropListData]="data.boardData.applicationLightDtoList?.data"
+               class="example-list "
+               [ngStyle]="{'min-height.px': this.height}"
+               [id]="data.value"
+               (cdkDropListDropped)="drop($event)">
+            <div *ngFor="let item of data.boardData.applicationLightDtoList?.data; let i = index" cdkDrag
+                 [class]="item.style" (cdkDragDropped)="changeStatus($event,item, data.value)">
+              <div class="card">
+                <div class="card-body" [class]="getBgColorBySumm(item.price)">
+                  <p class="card-text">{{item.id}} &nbsp;{{item.operationType?.name[getDicNameByLanguage()]}}</p>
+                  <p class="card-text">
+                    {{item.agentLogin}}<br/>
+                    {{item.numberOfRooms}} комнатная, кв {{item.totalArea}}
+                    <span
+                      *ngIf="activeTab == 2">{{item?.residentialComplex ? item?.residentialComplex[getDicNameByLanguage()] : ''}}</span>
+                    <span *ngIf="activeTab == 1">{{item.district?.name[getDicNameByLanguage()]}}</span>
+                    <br/><span>цена: {{item.price | mask : 'separator.2'}}</span></p>
+                  <i class="fa fa-phone" *ngIf="item.phone"><a href="tel:8{{item.phone}}"
+                                                               class="text-white"> {{item.phone | mask: '+0 (000) 000-0000'}}</a></i>
+                </div>
+                <div class="card-footer">
+                  {{item.clientFullname}}
+                </div>
+              </div>
+              <br/>
+            </div>
           </div>
         </div>
       </div>
     </div>
-
   </div>
 </div>
+<ng-template #modalContentAdvance let-close="close">
+  <div class="modal-header">
+    <button type="button" class="close" (click)="modalRef2.hide()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <div class="row">
+      <div class="col-sm">
+        <button type="button" (click)="modalRef2.hide();showToAdvance('advanceAgreement')" class="btn btn2 btn-info btn-sm">Соглашение аванса</button>
+      </div>
+      <div class="col-sm">
+        <button type="button" (click)="modalRef2.hide();showToAdvance('depositAgreement')" class="btn btn2 btn-primary btn-sm">Соглашение задатка</button>
+      </div>
+    </div>
+  </div>
+</ng-template>
