--- a/frontend/src/app/components/board/close-deal/close-deal.component.html
+++ b/frontend/src/app/components/board/close-deal/close-deal.component.html
@@ -4,14 +4,15 @@
     <fieldset class="scheduler-border col-sm">
       <legend class="scheduler-border">Договор на оказания услуги</legend>
 
-      <div class="row">
-        <div class="col-sm">
-          <label class="btn btn-info btn2 btn-sm">Статус:
-            <i class="fa fa-upload"></i>
-            <input type="file" multiple="" hidden (change)="onFileChange($event, 3)">
-          </label>
+      <div class="form-group row" [class.disabledDev]="contractStatus == 1">
+        <label class="col-sm-2 col-form-label">Статус</label>
+        <div class="col-sm-10">
+          <button type="button" class="btn btn-success btn-sm btn2" (click)="generateOu()">{{contractStatusName}}</button>
         </div>
-        <div class="col-sm">
+      </div>
+
+      <div class="row">
+        <div class="col-sm" [class.disabledDev]="contractStatus == 2">
           <label class="btn btn-info btn2 btn-sm">Сканированный документ
             <i class="fa fa-upload"></i>
             <input type="file" multiple="" hidden (change)="onFileChange($event, 3)">
