--- a/frontend/src/app/components/claims/create-claim/advance/advance.component.html
+++ b/frontend/src/app/components/claims/create-claim/advance/advance.component.html
@@ -1,15 +1,15 @@
 <div class="card">
   <div class="card-body">
-    <div class="contract-form">
+    <div class="contract-form" [formGroup]="contractForm">
       <h1 class="h3-responsive text-center">{{this.createClaimComponent.activeTab == 'advanceAgreement' ? 'Соглашение аванса' : 'Соглашение задатка'}}</h1>
       <div class="row">
         <div class="col-sm-2">
           <div class="row">
             <div class="input-group mb-3">
-              <input type="text" class="form-control" placeholder="ID заявки" aria-label="Recipient's username"
-                     aria-describedby="button-addon2">
-              <div class="input-group-append">
-                <button class="btn btn-purple  btn-sm m-0 px-3 py-2 z-depth-0 waves-effect" type="button" id="button-addon2">
+              <input type="number" class="form-control" placeholder="ID заявки" formControlName="applicationId"
+                     aria-describedby="button-addon2" [(ngModel)]="contractForm.applicationId">
+              <div class="input-group-append" [class.disabled]="!contractForm.applicationId">
+                <button class="btn btn-purple btn-sm m-0 px-3 py-2 z-depth-0 waves-effect" (click)="searchApplication()" type="button" id="button-addon2">
                   <i class="fa fa-search" aria-hidden="true"></i>
                 </button>
               </div>
@@ -17,14 +17,18 @@
           </div>
           <div class="row">
             <label>Сумма аванса (тг)<span class="text-danger">&nbsp;*</span></label>
-            <input type="text" class="form-control"
+            <input type="text" class="form-control" formControlName="payedSum"
                    mask="separator" suffix=" ₸" thousandSeparator=" "/>
           </div>
         </div>
-        <div class="col-sm"></div>
+        <div class="col-sm">
+          <div class="root" *ngIf="isShowPdf">
+            <iframe id="pdfIframe" type="application/pdf" height="100vh" width="100%" frameBorder="0"></iframe>
+          </div>
+        </div>
         <div class="col-sm-2">
           <div class="row">
-            <button type="button" class="btn btn-purple btn2 btn-sm">Сформировать договор</button>
+            <button type="button" (click)="generateContract()" class="btn btn-purple btn2 btn-sm">Сформировать договор</button>
           </div>
           <div class="row">
             <button type="button" class="btn btn-deep-purple btn2 btn-sm">Распечатка</button>
