--- a/frontend/src/app/components/claims/create-claim/advance/advance.component.html
+++ b/frontend/src/app/components/claims/create-claim/advance/advance.component.html
@@ -1,14 +1,14 @@
 <div class="card">
   <div class="card-body">
     <div class="contract-form" [formGroup]="contractForm">
-      <h1 class="h3-responsive text-center">{{this.createClaimComponent.activeTab == 'advanceAgreement' ? 'Соглашение аванса' : 'Соглашение задатка'}}</h1>
       <div class="row">
         <div class="col-sm-2">
           <div class="row">
+            <label>ID заявки<span class="text-danger">&nbsp;*</span></label>
             <div class="input-group mb-3">
-              <input type="number" class="form-control" placeholder="ID заявки" formControlName="applicationId"
-                     aria-describedby="button-addon2" [(ngModel)]="contractForm.applicationId">
-              <div class="input-group-append" [class.disabled]="!contractForm.applicationId">
+              <input type="number" class="form-control" placeholder="ID заявки" formControlName="sellApplicationId"
+                     aria-describedby="button-addon2" [(ngModel)]="contractForm.sellApplicationId">
+              <div class="input-group-append" [class.disabled]="!contractForm.sellApplicationId">
                 <button class="btn btn-purple btn-sm m-0 px-3 py-2 z-depth-0 waves-effect" (click)="searchApplication()" type="button" id="button-addon2">
                   <i class="fa fa-search" aria-hidden="true"></i>
                 </button>
@@ -22,6 +22,9 @@
           </div>
         </div>
         <div class="col-sm">
+          <fieldset class="scheduler-border col-sm">
+            <legend class="scheduler-border" translate>Соглашение о приеме {{this.createClaimComponent.activeTab == 'advanceAgreement' ? 'аванса' : 'задатка'}}</legend>
+          </fieldset>
           <div class="root" *ngIf="isShowPdf">
             <iframe id="pdfIframe" type="application/pdf" height="100vh" width="100%" frameBorder="0"></iframe>
           </div>
