--- a/frontend/src/app/components/claims/create-claim/advance/advance.component.scss
+++ b/frontend/src/app/components/claims/create-claim/advance/advance.component.scss
@@ -18,3 +18,9 @@ legend {
   padding: 5px 5px 5px 10px;
   background-color: #ffffff;
 }
+.root {
+  height: 100vh;
+  iframe {
+    height: 100vh;
+  }
+}
