--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -15,7 +15,7 @@
           </li>
           <li class="nav-item" *ngIf="this.applicationId">
             <a class="nav-link" [ngClass]="{ 'active':activeTab === 'advanceAgreement' || activeTab === 'depositAgreement'}" id="advanceAgreement-tab" data-toggle="tab" href="#advanceAgreement" role="tab"
-               aria-controls="advanceAgreement" (click)="openModal2(modalContentAdvance)"
+               aria-controls="advanceAgreement" (click)="openModal2(modalContentAdvance);"
                aria-selected="false" >Соглашение {{activeTab === 'advanceAgreement' ? 'Аванса' : ''}} {{activeTab === 'depositAgreement' ? 'Задатка':''}}</a>
           </li>
           <li class="nav-item" *ngIf="this.applicationId">
@@ -1509,7 +1509,7 @@
         <app-contract-ou></app-contract-ou>
       </div>
       <div class="tab-pane fade" id="advanceAgreement" *ngIf="isSell()" [ngClass]="(activeTab === 'advanceAgreement' || activeTab === 'depositAgreement') ? 'active show' : ''" role="tabpanel" aria-labelledby="advanceAgreement-tab">
-        <app-advance></app-advance>
+        <app-advance [act]="activeTab"></app-advance>
       </div>
       <div class="tab-pane fade" id="impressions" [ngClass]="activeTab == 'events' ? 'active show' : ''" role="tabpanel" aria-labelledby="impressions-tab">
         <app-claim-events></app-claim-events>
