--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -93,10 +93,10 @@
         </div>
       </div>
       <ul class="nav nav-tabs" id="myTab2" role="tablist">
-        <li class="nav-item" *ngIf="true">
-          <a class="nav-link " id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
-             aria-selected="true">Мои клиенты</a>
-        </li>
+<!--        <li class="nav-item" *ngIf="fa">-->
+<!--          <a class="nav-link " id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"-->
+<!--             aria-selected="true">Мои клиенты</a>-->
+<!--        </li>-->
         <li class="nav-item" *ngIf="agentRoles || rgRoles">
           <a class="nav-link active" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
              aria-selected="false">Мои объекты</a>
