--- a/frontend/src/app/helpers/nav/nav.component.html
+++ b/frontend/src/app/helpers/nav/nav.component.html
@@ -41,15 +41,17 @@
       </div>
     </div>
     <div class="st334">
+
      <p class="st335">Аналитика</p>
       <p class="st336"></p>
       <p class="st337">Новости</p>
-      <div class="input-group">
-        <input type="text" class="st3355" placeholder="Поиск">
-        <div class="input-group-append">
-          <i class="fa fa-2x fa-search st3377"></i>
-        </div>
-      </div>
+      <div class="col-sm"></div>
+      <!--<div class="input-group">-->
+        <!--<input type="text" class="st3355" placeholder="Поиск">-->
+        <!--<div class="input-group-append">-->
+          <!--<i class="fa fa-2x fa-search st3377"></i>-->
+        <!--</div>-->
+      <!--</div>-->
       <div class="st3378">
         <ul class="navbar-nav ml-auto nav-flex-icons " >
           <li class="nav-item dropdown">
