--- a/frontend/src/app/components/claims/create-claim/contract-ou/contract-ou.component.html
+++ b/frontend/src/app/components/claims/create-claim/contract-ou/contract-ou.component.html
@@ -34,7 +34,7 @@
             </div>
           </div>
           <div class="col-sm">
-            <div class="form-group row">
+            <div class="form-group row" *ngIf="isBuy">
               <label class="col-sm-5 col-form-label">Тип договора
                 <span class="text-danger">&nbsp;*</span>
               </label>
