--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -1509,7 +1509,7 @@
         <app-contract-ou></app-contract-ou>
       </div>
       <div class="tab-pane fade" id="advanceAgreement" *ngIf="isSell()" [ngClass]="(activeTab === 'advanceAgreement' || activeTab === 'depositAgreement') ? 'active show' : ''" role="tabpanel" aria-labelledby="advanceAgreement-tab">
-        <app-advance [act]="activeTab"></app-advance>
+        <app-advance ></app-advance>
       </div>
       <div class="tab-pane fade" id="impressions" [ngClass]="activeTab == 'events' ? 'active show' : ''" role="tabpanel" aria-labelledby="impressions-tab">
         <app-claim-events></app-claim-events>
