вернул старый нав

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -103,12 +103,12 @@ app-charts {
   border: none!important;
   outline: none!important;
 }
-.modal-content {
-  margin-top: 160px;
-}
-.card-body.card-bg{
-  padding-left: 400px;padding-top: 160px;
-}
+//.modal-content {
+//  margin-top: 160px;
+//}
+//.card-body.card-bg{
+//  padding-left: 400px;padding-top: 160px;
+//}
 
 
 fieldset {
