--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -1093,7 +1093,7 @@
                                   <ng-select
                                     [items]="heatingSystems"
                                     [(ngModel)]="applicationForm.heatingSystemId"
-                                    formControlName="sewerageId"
+                                    formControlName="heatingSystemId"
                                     bindValue="value"
                                     placeholder="Отопление">
                                   </ng-select>
