--- a/frontend/src/app/components/board/close-deal/close-deal.component.html
+++ b/frontend/src/app/components/board/close-deal/close-deal.component.html
@@ -17,6 +17,8 @@
             <i class="fa fa-upload"></i>
             <input type="file" multiple="" hidden (change)="onFileChange($event, 1)">
           </label>
+          <a *ngIf="this.contract?.uuid" [href]="util.generatorFullUrl(this.contract?.uuid)" target="_blank"><i class="fa fa-paperclip" aria-hidden="true"></i>
+            {{this.contract?.name}} ({{this.contract?.size}} КБ)</a>
         </div>
       </div>
     </fieldset>
@@ -36,6 +38,8 @@
             <i class="fa fa-upload"></i>
             <input type="file" multiple="" hidden (change)="onFileChange($event, 2)">
           </label>
+          <a *ngIf="this.deposit?.uuid" [href]="util.generatorFullUrl(this.deposit?.uuid)" target="_blank"><i class="fa fa-paperclip" aria-hidden="true"></i>
+            {{this.deposit?.name}} ({{this.deposit?.size}} КБ)</a>
         </div>
       </div>
 
