--- a/frontend/src/app/components/claims/create-claim/create-claim.component.scss
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.scss
@@ -37,8 +37,9 @@ legend {
   width: 10%
 }
 
-textarea {
+textarea, textarea:focus {
   border: none;
+  outline: none !important;
   border-bottom: 1px solid black;
 }
 
