--- a/frontend/src/app/components/login/login.component.scss
+++ b/frontend/src/app/components/login/login.component.scss
@@ -1,5 +1,88 @@
+.hidden-router {
+  flex: 1 1 auto;
+  display: flex;
+  overflow: hidden;
+}
+
+.main-block {
+  //width: 100%;
+  //height: 100%;
+  //width: 1920px;
+  //height: 1080px;
+  //opacity: 0.5;
+  //background-image: url("src/assets/images/2307.jpg");
+}
+
+.main-section-block {
+  width: 650px;
+  height: 560px;
+  box-shadow: 0 0 2.9px 0.1px rgba(0, 0, 0, 0.3);
+  background-color: #ffffff;
+}
+
+.montserrat-label {
+  font-family: Montserrat-Regular;
+  font-size: 18px;
+  color: #1a1a1a;
+  line-height: 8px;
+  text-align: left;
+  margin-left: 28px;
+}
+
+.montserrat-icon {
+  transform: scale(1.5, 1.4);
+  margin: 8px;
+}
+
+.show-password {
+  font-family: Cuprum;
+  font-size: 14px;
+  color: #656c75;
+  line-height: 8px;
+  text-align: left
+}
+
 .login-page {
   width: 500px;
   margin: 0 auto;
   background-color: white;
+}
+
+.enter-btn {
+  width: 142px !important;
+  height: 53px !important;;
+  background-color: #00b2a8;
+  outline-color: #00b2a8;
+  border-color: #00b2a8;
+}
+
+.aquaColor {
+  color: #00b2a8;
+}
+
+label, input {
+  position: relative;
+  display: block;
+  padding-right: 76px;
+  width: 170px;
+  box-sizing: border-box;
+}
+
+label::after {
+  content: '.' attr(data-domain);
+  position: absolute;
+  top: 4px;
+  left: 94px;
+  font-family: arial, helvetica, sans-serif;
+  font-size: 12px;
+  display: block;
+  color: rgba(0, 0, 0, 0.6);
+  font-weight: bold;
+}
+
+.vitrina {
+  font-family: Romul;
+  font-size: 41.5px;
+  letter-spacing: 6.23px;
+  color: #0d0d0d;
 }
